--- a/frontend/src/app/components/pages/delele-account-page/delele-account-page.component.html
+++ b/frontend/src/app/components/pages/delele-account-page/delele-account-page.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper" *ngIf="user" [@fadeInOut]>
   <section>
-    <app-title title="Delete Account" fontSize="2rem" />
+    <app-title title="Delete Account" fontSize="2rem" color="#3b3b3b" />
     <span class="delete-icon"><mat-icon>delete</mat-icon></span>
     
     <h4>Are you sure you want to delete your account?</h4>
