--- a/frontend/src/app/components/pages/forgotten-password/forgotten-password.component.css
+++ b/frontend/src/app/components/pages/forgotten-password/forgotten-password.component.css
@@ -5,7 +5,6 @@ app-partial-background{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 85vh;
     height: 100%;
     margin-top: 3rem;
 }
@@ -13,10 +12,10 @@ app-partial-background{
 .details {
     width: 25rem;
     padding: 2rem;
-    background-color: rgba(255, 255, 255, 0.747);
+    background-color: var(--glass);
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
-    border: 0.5px solid whitesmoke;
+    box-shadow: 0 2px 4px var(--shadow-dark); 
+    border: 0.5px solid var(--light-color);
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -39,13 +38,13 @@ form {
 }
 
 .register a {
-    color:  #3f51b5;
+    color:  var(--primary-color);
 }
 
 span {
     font-size: 14px;
     margin-bottom: 1.5rem;
-    color: #414141;
+    color: var(--text-color);
 }
 
 @media screen and (max-width: 700px) {
@@ -54,6 +53,4 @@ span {
       padding: 1rem;
       max-width: 25rem;
     }
-  
-    
-  }
+}
