--- a/frontend/src/app/components/pages/orders-page/orders-page.component.html
+++ b/frontend/src/app/components/pages/orders-page/orders-page.component.html
@@ -1,32 +1,34 @@
-<app-title title="{{ user.name }}'s Orders"></app-title>
+<div class="wrapper">
+  <app-title title="{{ user.name }}'s Orders"></app-title>
 
-<div class="container">
-  <div class="content">
-    <app-not-found
-    [visible]="!userOrders || userOrders.length <= 0"
-    notFoundMessage="You have no orders placed."
-    resetLinkText="Back to Store"
-  />
+  <div class="container">
+    <div class="content">
+      <app-not-found
+        [visible]="!userOrders || userOrders.length <= 0"
+        notFoundMessage="You have no orders placed."
+        resetLinkText="Back to Store"
+      />
 
+      <div *ngIf="userOrders && userOrders.length > 0" class="summary">
+        <div *ngFor="let order of userOrders">
+          <h2>
+            Order:
+            <span class="span"> {{ order.id }}</span>
+          </h2>
+          <h3>
+            Total Price: <span>{{ order.totalPrice | currency : "EUR" }}</span>
+          </h3>
 
-    <div *ngIf="userOrders && userOrders.length > 0" class="summary">
-      <div *ngFor="let order of userOrders">
-        <h2>
-          Order: {{ order.id }}
-        </h2>
-        <h3>
-          Total Price: <span>{{ order.totalPrice | currency : "EUR" }}</span>
-        </h3>
+          <h3>
+            Status: <span>{{ order.status }}</span>
+          </h3>
 
-        <h3>
-          Status: <span>{{ order.status }}</span>
-        </h3>
+          <h3>
+            Created At: <span>{{ order.createdAt | date }}</span>
+          </h3>
 
-        <h3>
-          Created At: <span>{{ order.createdAt | date }}</span>
-        </h3>
-
-        <app-order-items-list [order]="order" />
+          <app-order-items-list [order]="order" />
+        </div>
       </div>
     </div>
   </div>
