--- a/frontend/src/app/components/pages/users-list/users-list.component.html
+++ b/frontend/src/app/components/pages/users-list/users-list.component.html
@@ -6,7 +6,7 @@
         <input
           matInput
           (keyup)="applyFilter($event)"
-          placeholder="Filter Products"
+          placeholder="Filter Users"
           #input
         />
       </div>
