--- a/frontend/src/app/components/partials/card/card.component.css
+++ b/frontend/src/app/components/partials/card/card.component.css
@@ -1,14 +1,14 @@
 .card{
     height: 22.5rem;
     width: 20rem;
-    border: 1px solid whitesmoke;
+    border: 1px solid var(--light-background);
     border-radius: 1rem;
     margin: 0.5rem;
     display: flex;
     flex-direction: column;
     overflow: hidden;
     color:  #3f51b5;
-    background-color: white;
+    background-color: #fff;
     font-size: 0.8rem;
 }
 
@@ -30,19 +30,18 @@
 .card:hover {
     transform: scale(1.05);
     transition: 0.3s ease-in-out;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 2px 4px var(--shadow-color); 
 }
 
 .card a {
     align-self: center;
-    color:rgb(63, 81, 181);
+    color: #3f51b5;
 }
 
 .image-link {
     aspect-ratio: 14 / 9;
     width: 100%;
 }
-
 
 img{
     object-fit: cover;
@@ -102,7 +101,7 @@ img{
     background-color: whitesmoke;
     display: inline-block;
     font-size: 0.8em;
-    color: grey;
+    color: var(--disabled-color);
     margin-right: 0.3rem;
     padding: 0 0.5rem;
     margin-top: 0.2rem;
@@ -110,8 +109,8 @@ img{
 
 .price{
     padding: 0 1rem;
-    background: white;
-    color: #414141;
+    background: #fff;
+    color: #3b3b3b;
     font-size: 1.1em;
     display: flex;
     justify-content: space-between;
@@ -125,7 +124,7 @@ img{
     justify-content: center;
     align-items: center;
     color: #3f51b5;
-    background-color: white;
+    background-color: #fff;
     opacity: 0.8; 
     border: none;
     border-radius: 50%;
@@ -146,6 +145,5 @@ mat-icon {
     font-size: 1.5em;
     width: 1.5rem;
     height: 1.5rem;
-   
 }
 
