--- a/frontend/src/app/components/partials/input-container/input-container.component.html
+++ b/frontend/src/app/components/partials/input-container/input-container.component.html
@@ -3,7 +3,7 @@
   [ngStyle]="{ 'background-color': bgColor, border: border }"
 >
   <div class="{{ icon ? 'icon-container' : 'not' }}" >
-    <mat-icon class="icon" color="primary">
+    <mat-icon class="icon" >
       {{ icon }}
     </mat-icon>
   </div>
