--- a/frontend/src/app/components/pages/account-page/account-page.component.css
+++ b/frontend/src/app/components/pages/account-page/account-page.component.css
@@ -1,4 +1,5 @@
 .wrapper {
+    padding-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,10 +19,9 @@ p {
     height: 100%;
     margin: 0;
     border: none;
-    border-bottom: 0 solid grey;
+    border-bottom: 0 solid var(--disabled-color);
     transition: border-bottom 0.15s ease-out;
-    background-color: rgba(255, 255, 255, 0.096);
-    color: #616161;
+    color: var(--title-color);
     font-weight: bold;
     font-size: 1.1rem;
     outline: none;
@@ -33,9 +33,9 @@ p {
     width: 27rem;
     height: 100%;
     min-height: 600px;  
-    background-color: #f3f3f3;
+    background-color: var(--light-color);
     border-radius: 5px;
-    box-shadow: 0 0 8px rgb(185, 185, 185);
+    box-shadow: 0 0 8px var(--shadow-color);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,8 +54,8 @@ p {
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    box-shadow: 0 0 8px rgb(185, 185, 185);
-    border: 2px solid #e5e5e5;
+    box-shadow: 0 0 8px var(--shadow-color);
+    border: 2px solid var(--light-background);
     object-fit: cover;
 }
 
@@ -63,7 +63,7 @@ p {
   width: 80%;
   padding: 1rem;
   border-radius: 5px;
-  background-color: #eeeeee;
+  background-color: var(--light-background);
 }
 
 .container {
@@ -81,7 +81,7 @@ input {
 
 label {
     margin: 0.5rem 0 0;
-    color: rgb(63, 81, 181);
+    color: var(--primary-color);
 }
 
 app-button {
@@ -91,6 +91,7 @@ app-button {
 
 .scroller-container {
   width: 80%;
+  max-width: calc(100vw - 300px);
 }
 
 .scroller {
@@ -121,27 +122,25 @@ app-button {
 }
 
 ::-webkit-scrollbar-track {
-  background: rgba(114, 130, 220);
+  background: var(--shadow-color);
   border-radius: 100vw;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(63, 81, 181);
+  background: var(--disabled-color);
   border-radius: 100vw;
-  border: 0.25rem solid rgba(114, 130, 220) ;
+  border: 0.25rem solid var(--shadow-color);
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(63, 81, 181)
+  background: var(--disabled-color);
 }
 
 @supports (scrollbar-color: red blue) {
   * {
-    scrollbar-color: rgba(63, 81, 181) rgba(114, 130, 220) ;
-    
+    scrollbar-color: var(--disabled-color) var(--shadow-color);
   }
 }
-
 
 
 
@@ -155,8 +154,6 @@ app-button {
     width: 100%;
     max-width: 18rem;
   }
-
- 
 }
 
 
