--- a/frontend/src/app/components/pages/cart-page/cart-page.component.css
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.css
@@ -1,9 +1,8 @@
 .wrapper { 
   height: 100%;
-  min-height: calc(100vh - 40px) ; 
+  min-height: calc(100vh - 60px) ; 
   width: 80%;
   margin: 0 auto;
-  padding-top: 100px;
   padding-bottom: 40px;
   display: flex;
   flex-direction: column;
@@ -13,15 +12,13 @@
   overflow: hidden;
 }
 
-
 .container{
   padding: 2rem;
   display: flex;
   flex-direction: column;
-  background-color: rgb(252, 251, 251);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+  background-color: var(--light-color);
+  box-shadow: 0 2px 4px var(--shadow-color); 
   border-radius: 0.5rem;
-
 }
 
 app-title {
@@ -41,173 +38,173 @@ app-title {
 }
 
 a {
-  color: rgb(63, 81, 181);
+  color: var(--primary-color);
 }
 
 a:hover {
   opacity: 0.8;
 }
 
+ul{
+  display: flex;
+  flex-direction: column;
+  flex:3 0;
+  justify-content: space-evenly;
+  border: 1px solid var(--light-color);
+  border-radius: 1rem;
+  list-style: none;
+  margin: 0.5rem;
+  padding: 0;
+  max-width: 800px;
+  background-color: var(--toggle-color);
+  
+}
+  
+ul li{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  border-bottom: 1px solid var(--light-color);
+  padding: 1rem;
+}
+
+ul li:last-child{
+  border: none;
+}
+
+li img{
+  width: 5rem;
+  height: 5rem;
+  border-radius: 100rem;
+  object-fit: cover;
+}
+
+li div{
+  padding: 0rem;
+}
+
+li div img {
+  cursor: pointer;
+}
+
+li div img:hover {
+  opacity: 0.8;
+}
+
+li div:not(:first-child){
+  flex-basis: 18%;
+}
+
+li select{
+  width: 3rem;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid var(--light-color);
+  font-size: 1.1rem;
+  font-weight: 100;
+}
+
+li .remove-button{
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  background: none;
+  border: none;
+  color: var(--primary-color);
+  outline: none;
+}
+
+li .remove-button:hover{
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+.checkout{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex:1 3;
+  height: 20rem;
+  border: 1px solid var(--light-color);
+  border-radius: 1rem;
+  width: 30rem;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  background-color: var(--toggle-color);
+
+}
+
+.checkout>div{
+  font-size: 1.4rem;
+  margin: 1rem;
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.products-count{
+  margin-bottom: 1.5rem;
+}
+
+.products-count::before{
+  content:"Count: ";
+  color: var(--disabled-color);
+}
+
+.total-price::before{
+  content: 'Total: ';
+  color: var(--disabled-color);
+}
+
+.checkout a{
+  padding: 1rem;
+  color: var(--toggle-color);
+  background: var(--primary-color);
+  display: block;
+  width: 99%;
+  border-radius: 1rem;
+  text-align: center;
+  opacity: 0.8;
+  justify-self: center;
+}
+
+.checkout a:hover{
+  opacity: 1;
+  cursor: pointer;
+}
+
+
+@media screen and (max-width: 990px) {
+  .wrapper {
+    width: 100%;
+  }
+  .card {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
   ul{
-    display: flex;
+    width: 100%;
+  }
+
+  
+  .checkout  {
+    width: 300px;
+  }
+  
+}
+
+@media screen and (max-width: 440px) {
+  .wrapper {
+    width: 100%;
+  }
+  ul li {
     flex-direction: column;
-    flex:3 0;
-    justify-content: space-evenly;
-    border: 1px solid #e4e4e4;
-    border-radius: 1rem;
-    list-style: none;
-    margin: 0.5rem;
-    padding: 0;
-    max-width: 800px;
-    background-color: white;
-    
+    gap: 5px;
   }
-  
-  ul li{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    border-bottom: 1px solid #e4e4e4;
-    padding: 1rem;
-  }
-  
-  ul li:last-child{
-    border: none;
-  }
-  
-  li img{
-    width: 5rem;
-    height: 5rem;
-    border-radius: 100rem;
-    object-fit: cover;
-  }
-  
-  li div{
-    padding: 0rem;
-  }
-
-  li div img {
-    cursor: pointer;
-  }
-
-  li div img:hover {
-    opacity: 0.8;
-  }
-  
-  li div:not(:first-child){
-    flex-basis: 18%;
-  }
-  
-  li select{
-    width: 3rem;
-    outline: none;
-    border: none;
-    border-bottom: 1px solid lightgrey;
-    font-size: 1.1rem;
-    font-weight: 100;
-  }
-  
-  li .remove-button{
-    padding: 0.5rem;
-    display: flex;
-    align-items: center;
-    background: none;
-    border: none;
-    color: rgb(63, 81, 181);
-    outline: none;
-  }
-  
-  li .remove-button:hover{
-    opacity: 0.7;
-    cursor: pointer;
-  }
-  
-  .checkout{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    flex:1 3;
-    height: 20rem;
-    border: 1px solid #e4e4e4;
-    border-radius: 1rem;
-    width: 30rem;
-    padding: 0.5rem;
-    margin: 0.5rem;
-    background-color: white;
-
-  }
-  
-  .checkout>div{
-    font-size: 1.4rem;
-    margin: 1rem;
-    flex: 3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-  }
-  
-  .products-count{
-    margin-bottom: 1.5rem;
-  }
-  
-  .products-count::before{
-    content:"Count: ";
-    color: grey;
-  }
-  
-  .total-price::before{
-    content: 'Total: ';
-    color: grey;
-  }
-  
-  .checkout a{
-    padding: 1rem;
-    color: white;
-    background:rgb(63, 81, 181);
-    display: block;
-    width: 99%;
-    border-radius: 1rem;
-    text-align: center;
-    opacity: 0.8;
-    justify-self: center;
-  }
-  
-  .checkout a:hover{
-    opacity: 1;
-    cursor: pointer;
-  }
-  
-
-  @media screen and (max-width: 990px) {
-    .wrapper {
-      width: 100%;
-    }
-    .card {
-      width: 100%;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    ul{
-      width: 100%;
-    }
-
-   
-    .checkout  {
-      width: 300px;
-    }
-   
-  }
-
-  @media screen and (max-width: 440px) {
-    .wrapper {
-      width: 100%;
-    }
-    ul li {
-      flex-direction: column;
-      gap: 5px;
-    }
-  }
+}
