--- a/frontend/src/app/components/pages/checkout-page/checkout-page.component.css
+++ b/frontend/src/app/components/pages/checkout-page/checkout-page.component.css
@@ -1,7 +1,7 @@
   .container{
     height: 100%;
     min-height: calc(100vh - 40px) ; 
-    padding-top: 100px;
+    padding-top: 40px;
     padding-bottom: 40px;
     margin-top: 1rem;
     display: flex;
@@ -44,8 +44,8 @@
   }
   
   button{
-    color: white;
-    background-color: rgb(63, 81, 181);
+    color: var(--toggle-color);
+    background-color: var(--primary-color);
     width: 100%;
     height: 3rem;
     font-size: 1.3rem;
@@ -82,6 +82,4 @@
   }
 
 
-  @media screen and (max-width: 700px) {
- 
-  }
+  
