--- a/frontend/src/app/components/pages/dashboard/dashboard.component.css
+++ b/frontend/src/app/components/pages/dashboard/dashboard.component.css
@@ -1,92 +1,5 @@
-.container {
-    padding-top: 60px;
-    padding-bottom: 40px;
-    height: 100%;
-    min-height: calc(100vh - 100px);
-    max-width: 1200px;
-    flex: 1;
-    overflow: hidden;
-    text-align: center;
-}
-.hide {
-    display: none;
-}
-
-.show {
-    display: block;
-    height: 100%;
-    background-color: blue;
-}
-
-app-title {
-    padding: 0.5rem;
-}
-
-.add-button {
-    align-self: flex-end;
-    margin: 1rem 2rem ;
-}
-
-.table-container {
-    margin-top: 2rem;
-    overflow-y: auto;
-    align-self: center;
-    display: flex;
-    flex-direction: column;
-}
-
-table {
+.dashboard {
+    height: 100vh;
     width: 100%;
+    background-color: var(--toggle-color);
 }
-
-.form-field-container {
-    max-width: 1170px;
-    margin: 0 auto;
-}
-  
-.mat-mdc-form-field {
-    font-size: 14px;
-    width: 100%;
-    position: fixed;
-    left: 0;
-    z-index: 1;
-}
-  
-
-img {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    border-radius: 50%;
-}
-
-th {
-    font-weight: 600;
-}
-
-td {
-    padding-block: 0.5rem;
-}
-
-.mat-mdc-paginator-container {
-    width: 50%;
-}
-
-mat-paginator {
-    padding-block: 1rem;
-}
-
-
-
-
-  @media screen and (max-width: 700px) {
-    .container {
-      width: 100%;
-    }
-
-    table {
-        margin-bottom: 0rem;
-    }
-
-    
-  }
