--- a/frontend/src/app/components/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/pages/dashboard/dashboard.component.html
@@ -1,91 +1,5 @@
-<div class="container">
-  <div [ngClass]="isSearchBarVisible ? 'show' : 'hide'">
-    <mat-form-field>
-      <div class="form-field-container">
-        <mat-label>Filter</mat-label>
-        <input
-          matInput
-          (keyup)="applyFilter($event)"
-          placeholder="Filter Products"
-          #input
-        />
-      </div>
-    </mat-form-field>
+<section class="dashboard">
+  <div class="top">
+    
   </div>
-
-  <div class="mat-elevation-z8 table-container">
-    <app-title title="Table of Products"></app-title>
-    <table mat-table [dataSource]="dataSource" matSort>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Product Name</th>
-        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="tags">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-        <td mat-cell *matCellDef="let row">{{ row.tags }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-        <td mat-cell *matCellDef="let row">{{ row.price }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="origins">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Origin</th>
-        <td mat-cell *matCellDef="let row">{{ row.origins }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.date | date : "dd/MM/yyyy" }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="imageUrl">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Image</th>
-        <td mat-cell *matCellDef="let row">
-          <img src="{{ row.imageUrl }}" alt="{{ row.name }}" />
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
-        <td mat-cell *matCellDef="let row">
-          <button mat-icon-button color="primary" (click)="editProduct(row)">
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button mat-icon-button color="warn" (click)="deleteProduct(row.id)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-
-      <!-- Row shown when there is no matching data. -->
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">
-          No data matching the filter "{{ input.value }}"
-        </td>
-      </tr>
-    </table>
-    <button
-      class="add-button"
-      button
-      mat-raised-button
-      color="warn"
-      (click)="openDialog()"
-    >
-      Add product
-      <mat-icon>add</mat-icon>
-    </button>
-
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 25, 100]"
-      aria-label="Select page of users"
-    ></mat-paginator>
-  </div>
-</div>
+</section>
