--- a/frontend/src/app/components/pages/delele-account-page/delele-account-page.component.css
+++ b/frontend/src/app/components/pages/delele-account-page/delele-account-page.component.css
@@ -1,7 +1,26 @@
+:root {
+    --primary-color: #3f51b5;
+    --toggle-color: #fff;
+    --background-color: #fcfcfc;
+    --title-color: #616161;
+    --text-color: #3b3b3b;
+    --disabled-color: #808080;
+    --light-background: #f0f0f0f0;
+    --transparent-light: #fffffff5;
+    --transparent-strong: #ffffff7c;
+    --glass:#ffffffbe;
+    --light-color: #f5f5f5;
+    --shadow-color: #b9b9b9;
+    --shadow-dark: #00000033;
+    --accent-color: #F50057;
+    --warning-color: #f44336cc;
+    --light-blue: #f0f8ff;
+  
+  }
+
 .wrapper {
     height: 100%;
     min-height: calc(100vh - 40px) ; 
-    padding-top: 100px;
     padding-bottom: 40px;
     display: flex;
     flex-direction: column;
@@ -21,10 +40,10 @@ section {
     align-items: center;
     justify-content: space-around;
     text-align: center;
-    color: #868686;
-    background-color: rgb(255, 255, 255);
+    color: #616161;
+    background-color: #f5f5f5;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 2px 4px #b9b9b9; 
 }
 
 .delete-icon {
@@ -33,7 +52,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 4px solid #f44336cc;
+    border: 4px solid var(--warning-color);
     border-radius: 50%;
 }
 
@@ -54,7 +73,7 @@ app-button {
 }
 
 mat-icon {
-    color: #f44336cc;
+    color: var(--warning-color);
     font-size: 100px;
     width: 100px;
     height: 100px;
