--- a/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.css
+++ b/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.css
@@ -1,7 +1,7 @@
 .wrapper {
     height: 100%;
     min-height: calc(100vh - 40px) ; 
-    padding-top: 100px;
+    padding-top: 60px;
     padding-bottom: 40px;
     flex: 1;
     display: flex;
@@ -19,9 +19,9 @@ app-title {
     margin: 0 auto;
     padding: 2rem;
     width: 27rem;
-    background-color: #f3f3f3;
+    background-color: var(--light-color);
     border-radius: 5px;
-    box-shadow: 0 0 8px rgb(185, 185, 185);
+    box-shadow: 0 0 8px var(--shadow-color);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,15 +34,14 @@ app-title {
     flex-direction: column;
     justify-content: center;
     position: relative;
-
 }
 
 img {
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    box-shadow: 0 0 8px rgb(185, 185, 185);
-    border: 2px solid #e5e5e5;
+    box-shadow: 0 0 8px var(--shadow-color);
+    border: 2px solid var(--light-color);
     object-fit: cover;
 }
 
@@ -56,7 +55,7 @@ input {
 }
 
 .icon {
-    color: rgba(63, 81, 181);
+    color: var(--primary-color);
     cursor: pointer;
 }
 
@@ -65,10 +64,10 @@ input {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    color: white;
-    background-color: #3f51b5;
-    border: 2px solid #3f51b5;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    color: var(--toggle-color);
+    background-color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+    box-shadow: 0 2px 4px var(--shadow-color); 
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -79,13 +78,13 @@ input {
 }
 
 .edit-icon mat-icon:hover {
-    color: #3f51b5;
+    color: var(--primary-color);
 }
 
 .edit-icon:hover {
-    background-color: white;
-    color: #3f51b5;
-    border: 2px solid #3f51b5;
+    background-color: var(--toggle-color);
+    color: var(--primary-color);
+    border: 2px solid var(--primary-color);
 }
 
 .icon:hover {
@@ -95,9 +94,9 @@ input {
 .file-input-container {
     width: 100px;
     padding: 10px;
-    background-color: white;
+    background-color: var(--toggle-color);
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 2px 4px var(--shadow-color); 
     transition: box-shadow 0.3s ease; 
     display: flex;
     align-items: center;
@@ -147,7 +146,7 @@ app-button {
 .delete-account-container a {
     height: 50px;
     font-size: 14px;
-    color: gray;
+    color: var(--disabled-color);
     text-decoration: underline;
 }
 
