--- a/frontend/src/app/components/pages/login-page/login-page.component.css
+++ b/frontend/src/app/components/pages/login-page/login-page.component.css
@@ -6,17 +6,16 @@ app-partial-background{
     justify-content: center;
     align-items: center;
     height: 100%;
-    min-height: 85vh;
     margin-top: 3rem;
 }
 
 .details {
     width: 25rem;
     padding: 2rem;
-    background-color: rgba(255, 255, 255, 0.747);
+    background-color: var(--glass);
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
-    border: 0.5px solid whitesmoke;
+    box-shadow: 0 2px 4px var(--shadow-dark); 
+    border: 0.5px solid var(--light-color);
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -40,7 +39,7 @@ form {
 }
 
 .register a {
-    color:  #3f51b5;
+    color: var(--primary-color);
 }
 
 @media screen and (max-width: 700px) {
@@ -49,7 +48,5 @@ form {
       padding: 1rem;
       max-width: 25rem;
     }
-
-    
-  }
+}
 
