--- a/frontend/src/app/components/pages/orders-list/orders-list.component.css
+++ b/frontend/src/app/components/pages/orders-list/orders-list.component.css
@@ -1,29 +1,13 @@
-.wrapper {
-    height: 100%;
-    min-height: calc(100vh - 40px) ; 
-    padding-top: 100px;
-    padding-bottom: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-    flex: 1; 
-    overflow: hidden;
-}
-
-
 
 .container {
-    padding-top: 60px;
     padding-bottom: 40px;
     height: 100%;
-    min-height: calc(100vh - 100px);
     max-width: 1200px;
     flex: 1;
     overflow: hidden;
     text-align: center;
 }
+
 .hide {
     display: none;
 }
@@ -31,7 +15,6 @@
 .show {
     display: block;
     height: 100%;
-    background-color: blue;
 }
 
 app-title {
@@ -90,19 +73,21 @@ td {
   
   .product-name {
     cursor: pointer;
-    padding: 0.5rem;
+    padding: 1rem;
   }
   
   .product-id {
     position: absolute;
     top: 0%;
     left: 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
+    color: var(--text-color);
+    background-color: var(--light-color);
+    border: 1px solid var(--shadow-color);
     padding: 5px;
     display: none;
     z-index: 100 !important;
     font-size: 0.5rem;
+    letter-spacing: 1px;
   }
 
   .bold {
