--- a/frontend/src/app/components/pages/payment-page/payment-page.component.css
+++ b/frontend/src/app/components/pages/payment-page/payment-page.component.css
@@ -1,45 +1,55 @@
   .container{
     height: 100%;
     min-height: calc(100vh - 40px); 
-    padding-top: 100px;
+    padding-top: 40px;
     padding-bottom: 40px;
     margin-top: 1rem;
     display: flex;
     margin: 0 auto;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex: 1; 
     gap: 3rem;
     overflow: hidden;
+    font-size: 1rem;
   }
 
   .scrollable-container {
     overflow-x: auto;
-
   }
   
-  .content{
+  .content {
     width: 35rem;
+    height: 100%;
     display: flex;
-    flex-direction: column;   
+    flex-direction: column; 
+    gap: 1.8rem;   
     overflow: hidden;
-
   }
 
-  
-  .summary > div{
+  .summary > div {
     display: flex;
-    margin-top: 0.7rem;
+    align-items: center;
+    margin-top: 0.5rem;
+    margin-bottom: 2rem;
   }
   
   .summary span {
-    font-size: 1.2rem;
+    font-size: 1.2em;
+    font-weight: 600;
   }
   
-  .summary h3{
+  .summary h3 {
     margin: 0 1rem 0 0;
     flex-basis: 5rem;
+    font-size: 1.2em;
+  }
+
+  .map, .content {
+    padding: 1rem;
+    background-color: var(--background-color);
+    border-radius: 5px;
   }
 
   app-map {
