--- a/frontend/src/app/components/pages/product-page/product-page.component.css
+++ b/frontend/src/app/components/pages/product-page/product-page.component.css
@@ -1,7 +1,5 @@
 .container{
   height: 100%;
-  min-height: calc(100vh - 40px); 
-  padding-top: 100px;
   padding-bottom: 40px;
   display: flex;
   justify-content: center;
@@ -18,8 +16,8 @@
   align-items: center;
   flex-wrap: wrap;
   border-radius: 0.5rem;
-  background-color: white;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+  background-color: var(--toggle-color);
+  box-shadow: 0 2px 4px var(--shadow-color); 
 }
 
 .box > *{
@@ -63,7 +61,6 @@ img{
 }
 
 .mode-select {
-
   display: flex;
   align-items: center;
 }
@@ -77,7 +74,7 @@ img{
 }
 
 .favorite{
-  color: #3f51b5;
+  color: var(--primary-color);
   font-size: 2.5rem;
 }
 
@@ -86,7 +83,7 @@ img{
 }
 
 .favorite.not{
-  color: grey;
+  color: var(--disabled-color);
 }
 
 .origins{
@@ -100,7 +97,7 @@ img{
   font-size: 1.2rem;
   margin: 0.5rem 0.5rem 0.5rem 0;
   border-radius: 2rem;
-  background-color: aliceblue;
+  background-color: var(--light-blue);
 }
 
 .tags{
@@ -114,12 +111,12 @@ img{
 }
 
 .tags a{
-  background-color: #f0f0f0;
+  background-color: var(--light-color);
   padding: 0.3rem 1rem;
   margin: 0.2rem 0.15rem;
   border-radius: 10rem;
   font-weight: 600;
-  color: #3f51b5;
+  color: var(--primary-color);
 }
 
 .cook-time{
@@ -135,17 +132,17 @@ img{
 .price{
   font-size: 1.8rem;
   margin: 2rem 2rem 2rem 0;
-  color: #414141;
+  color: var(--text-color);
 }
 
 .price::before{
   content: "Price: ";
-  color: darkgrey;
+  color: var(--disabled-color);
 }
 
 button{
-  color: white;
-  background: #3f51b5;
+  color: var(--toggle-color);
+  background: var(--primary-color);
   border: none;
   font-size: 1.2rem;
   padding: 1rem;
