--- a/frontend/src/app/components/pages/products-list/products-list.component.css
+++ b/frontend/src/app/components/pages/products-list/products-list.component.css
@@ -2,8 +2,10 @@
     padding-bottom: 40px;
     height: 100%;
     max-width: 1200px;
+    flex: 1;
     overflow: hidden;
     text-align: center;
+    transition: 0.5s ease;
 }
 
 .hide {
@@ -11,7 +13,8 @@
 }
 
 .show {
-    display: flex;
+    display: block;
+    height: 100%;
 }
 
 app-title {
@@ -83,6 +86,5 @@ mat-paginator {
     table {
         margin-bottom: 0rem;
     }
-
 
 }
