--- a/frontend/src/app/components/pages/register-page/register-page.component.css
+++ b/frontend/src/app/components/pages/register-page/register-page.component.css
@@ -3,18 +3,19 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    min-height: 85vh;
-    margin: 1.5rem 0;
+    width: calc(100vw - 250px);
+    margin: 0 auto;
   }
+
 
   .details {
     width: 25rem;
     padding: 2rem;
-    background-color: rgba(255, 255, 255, 0.747);
+    background-color: var(--glass);
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
-    border: 0.5px solid whitesmoke;
-    z-index: 1;
+    box-shadow: 0 2px 4px var(--shadow-dark); 
+    border: 0.5px solid var(--light-color);
+    z-index: 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -34,7 +35,8 @@ form {
 }
 
 .login a {
-  color:  #3f51b5;
+  color:  var(--primary-color);
+  text-decoration: underline;
 }
 
 
