--- a/frontend/src/app/components/pages/reset-password/reset-password.component.css
+++ b/frontend/src/app/components/pages/reset-password/reset-password.component.css
@@ -1,22 +1,18 @@
-app-partial-background{
-    z-index: -1;
-}
+
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    min-height: 85vh;
     margin-top: 3rem;
 }
 
 .details {
     width: 25rem;
     padding: 2rem;
-    background-color: rgba(255, 255, 255, 0.747);
+    background-color: var(--glass);
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
-    border: 0.5px solid whitesmoke;
+    box-shadow: 0 2px 4px var(--shadow-dark); 
+    border: 0.5px solid var(--light-color);
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -38,13 +34,13 @@ form {
 }
 
 .register a {
-    color:  #3f51b5;
+    color:  var(--primary-color);
 }
 
 span {
     font-size: 14px;
     margin-bottom: 1rem;
-    color: #414141;
+    color: var(--text-color);
 }
 
 
