--- a/frontend/src/app/components/partials/footer/footer.component.css
+++ b/frontend/src/app/components/partials/footer/footer.component.css
@@ -1,13 +1,14 @@
 footer {
-    width: 100%;
     height: 40px;
     line-height: 40px;
     text-align: center;
+    z-index: 10 !important;
 }
+
 p {
     margin: 0;
     padding: 0;
     width: 80%;
-    color: #a5a5a5;
+    color: var(--disabled-color);
     display: inline-block;
 }
