--- a/frontend/src/app/components/partials/input-container/input-container.component.css
+++ b/frontend/src/app/components/partials/input-container/input-container.component.css
@@ -3,7 +3,7 @@
     padding: 0.5rem;
     margin-bottom: 0.5rem;
     border-radius: 0.7rem;
-    border: 1px solid #e0e0e0;
+    border: 1px solid var(--light-background);
     color: #ffffff00;
     display: flex;
     flex-direction: row;
@@ -24,13 +24,17 @@
   .icon-container {
     width: 2rem;
     height: 2rem;
-    border-right: 1px solid #3f51b5a1;
+    border-right: 1px solid var(--primary-color);
     display: flex;
     align-items: center;
   }
 
   .icon {
     width: 2rem;
+  }
+
+  mat-icon {
+    color: var(--primary-color)
   }
 
   .not {
@@ -45,7 +49,7 @@
     justify-content: center; 
     align-self: flex-start;
     font-size: 0.9rem;
-    color: #3f51b5;
+    color: var(--primary-color);
     font-size: 1rem;
   }
 
@@ -56,7 +60,7 @@
     display: flex;
     align-items: center;
     align-self: flex-start;
-    color: black;
+    color: var(--text-color);
   }
 
 
