--- a/frontend/src/app/components/partials/navigation/navigation.component.css
+++ b/frontend/src/app/components/partials/navigation/navigation.component.css
@@ -1,22 +1,157 @@
-.wrapper {
-    height: 100%;
-    width: 250px;
-}
-
 nav {
     height: 100%;
     width: 250px;
     position: fixed;
     top: 0;
-    left: 0;
-    background-color: whitesmoke;
+    left: 0; 
+    background-color: var(--background-color);
+    box-shadow: 0 0 8px var(--shadow-color);
+    z-index: 0;
+    transition:  0.5s ease;
+}
 
+.link-name {
+    transition: opacity 0.5s ease-in-out;
+}
+
+  
+nav.close {
+    width: 73px;
+}
+
+nav.close li a .link-name{
+    opacity: 0;
+    pointer-events: none;
+}
+
+.logo {
+    width: 100%;
+    height: 60px;
+    padding: 1rem;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    font-weight: 600;
 }
 
 .logo-name {
-    min-width: 100px;
+    width: 100%;
+    font-size: 22px;
+    color: var(--text-color);
+    white-space: nowrap;
+    transition: opacity 0.5s ease;
+}
+
+nav.close .logo-name {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.logo-image {
+    width: 45px;
+    height: 45px;
     display: flex;
     align-items: center;
-    font-size: 22px;
+    justify-content: center;
+    border-radius: 50%;
+    border: 2px solid #3f51b5;
+    background-color: #3f51b5;
+    color: #fff;
+    letter-spacing: 1.5px;
     font-weight: 600;
 }
+
+ul {
+    padding: 0rem;
+    width: 100%;
+}
+
+li {
+    width: 100%;
+    color:var(--primary-color);
+    list-style: none;
+
+}
+
+li:hover  {
+    background:var(--primary-color);
+    color: var(--toggle-color);
+    cursor: pointer;
+}
+
+mat-icon {
+    display: flex;
+    align-items: center;
+    
+}
+
+a {
+    width: 100%;
+    padding: 1rem 1.5rem;
+    display: flex;
+    align-items: center; 
+    gap: 1rem;
+    font-size: 1.2rem;  
+    color: var(--primary-color);
+}
+
+a:hover {
+    background:var(--primary-color);
+    color: var(--toggle-color);
+    cursor: pointer;
+}
+
+a:hover .logo-image {
+    border-color: var(--toggle-color);
+}
+
+a:hover .logo-name {
+    color: var(--toggle-color);
+}
+
+li a > span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon {
+    font-size: 1.5rem;  
+    display: flex;
+    align-items: center;
+}
+
+
+mat-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu-items  {
+    margin-top: 40px;
+    height: calc(100% - 90px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.logout-mode {
+    width: 100%;
+    padding-top: 10px;
+    border-top: 1px solid var(--light-color);
+}
+
+.login-link {
+    width: 0px;
+}
+ 
+
+.mode {
+    position: relative;
+    margin-bottom: 40px;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+}
+
