--- a/frontend/src/app/components/partials/search/search.component.css
+++ b/frontend/src/app/components/partials/search/search.component.css
@@ -3,7 +3,7 @@
     justify-content: center;
     margin-bottom: 0rem;
     width: 100%;
-    box-shadow: 0 0 8px rgb(185, 185, 185);
+    box-shadow: 0 0 8px var(--shadow-color);
 }
 
 input{
@@ -11,7 +11,7 @@ input{
   border: none;
   height: 3rem;
   width: 200px;
-  background-color: white;
+  background-color: #fff;
   padding: 1.2rem;
   font-size: 14px;
   font-weight: 500;
@@ -26,8 +26,8 @@ input::placeholder {
 }
 
 input:focus {
-  background-color: #f1f1f1;
-  border: 2px solid #3f51b5;
+ 
+  border: 2px solid var(--primary-color);
 
 }
 
@@ -37,8 +37,8 @@ div button {
   font-size: 1rem;
   border-radius: 0 5px 5px 0;
   border: none;
-  background-color: #3f51b5;
-  color: white;
+  background-color: var(--primary-color);
+  color: var(--toggle-color);
   opacity: 0.8;
   outline: none;
   display: flex;
