--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,9 +7,29 @@
   font-family:Arial, Helvetica, sans-serif;
 }
 
+:root {
+  --primary-color: #3f51b5;
+  --toggle-color: #fff;
+  --background-color: #fcfcfc;
+  --title-color: #616161;
+  --text-color: #3b3b3b;
+  --disabled-color: #808080;
+  --light-background: #f0f0f0f0;
+  --transparent-light: #fffffff5;
+  --transparent-strong: #ffffff7c;
+  --glass:#ffffffbe;
+  --light-color: #f5f5f5;
+  --shadow-color: #b9b9b9;
+  --shadow-dark: #00000033;
+  --accent-color: #F50057;
+  --warning-color: #f44336cc;
+  --light-blue: #f0f8ff;
+
+}
+
 html {
   font-size:16px;
-  background-color: #fcfcfc;
+  background-color: var(--background-color);
 }
 
 body {
@@ -20,11 +40,56 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  background-color: #fcfcfc;
+  background-color: var(--background-color);
+
 }
 
 a {
   text-decoration: none;
 }
+
+.dark-theme {
+  background-color: #1a1a1a;
+  color: #fff;
+
+    --primary-color: #e3e3e3;
+    --toggle-color: #3f51b5;
+    --background-color: #242526; /* Dark background color */
+    --title-color: #fff; /* Light text color */
+    --text-color: #fff; /* Light text color */
+    --disabled-color: #aeaeae;
+    --light-background: #444; /* Slightly lighter background */
+    --transparent-light: #55555575; /* Slightly transparent light color */
+    --transparent-strong: #66666695; /* Slightly transparent strong color */
+    --glass: #444444be; /* Slightly transparent background */
+    --light-color: #555; /* Slightly lighter text color */
+    --shadow-color: #464646; /* Darker shadow color */
+    --shadow-dark: #00000033;
+    --accent-color: rgb(253, 123, 143);
+    --warning-color: #ff3c2e;
+    --light-blue: #f0f8ff;
+  
+  
+}
+
+.light-theme {
+  background-color: #fff;
+  color: #333;
+}
+
+
+mat-form-field {
+  margin-left: 250px;
+  top: 60px;
+}
+
+
+
+/* Style the label inside mat-form-field */
+mat-label {
+  color: #3f51b5;
+}
+
+
 
 
