new dashboard and responsive sidebar nav

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-loading></app-loading>
-<div [class.dark-theme]="isDarkTheme()" [class.light-theme]="isLightTheme()">
+<div class="wrapper" [class.dark-theme]="isDarkTheme()" [class.light-theme]="isLightTheme()">
   <app-header></app-header>
 
   <div class="app-container">
