--- a/frontend/src/app/components/pages/orders-list/orders-list.component.html
+++ b/frontend/src/app/components/pages/orders-list/orders-list.component.html
@@ -31,31 +31,29 @@
           <td mat-cell *matCellDef="let row">
                 <ng-container *ngFor="let item of row.items">
                     <div class="product-container">
-                      <span class="product-name" (mouseenter)="item.showProductId = item.product.id" (mouseleave)="item.showProductId = null">
-                        {{ item.product.name }}
+                      <span class="product-name" >
+                        {{ item }}
                       </span>
-                      <span class="product-id" [ngClass]="{'visible': item.showProductId === item.product.id}">
-                        ID: <span class="bold">{{ item.product.id }}</span>
-                      </span>
+                     
                     </div>
                   </ng-container>
               
           </td>
         </ng-container>
   
-        <ng-container matColumnDef="price">
+        <ng-container matColumnDef="totalPrice">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
           <td mat-cell *matCellDef="let row">{{ row.totalPrice | currency : "EUR"}} </td>
         </ng-container>
   
-        <ng-container matColumnDef="date">
+        <ng-container matColumnDef="createdAt">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
           <td mat-cell *matCellDef="let row">
             {{ row.createdAt | date : "dd/MM/yyyy" }}
           </td>
         </ng-container>
   
-        <ng-container matColumnDef="customer">
+        <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
           <td mat-cell *matCellDef="let row">
            {{ row.name }}
@@ -68,6 +66,7 @@
            {{ row.address }}
           </td>
         </ng-container>
+
   
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
