--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,12 +1,16 @@
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+
 .app-container {
-    height: 100%;
     width: 100%;
-    min-height: calc(100vh - 40px) ; 
     padding-top: 60px;
-    padding-bottom: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-grow: 1;
     overflow: hidden;
 }
 
@@ -15,7 +19,7 @@ app-navigation {
     width: 250px; 
 }
 
-.content {
+.content, mat-form-field {
     width:  calc(100% - 250px);
     transition:  0.5s ease;
 }
@@ -28,7 +32,35 @@ app-navigation {
     transition:  0.5s ease;
 }
 
+
 .close  {
     width: 73px;
+}
+
+
+
+
+@media screen and (max-width: 700px) {
+    .content {
+        left: 73px;
+        width: calc(100% - 73px);
+        transition:  0.5s ease;
+    }
+    
+    app-navigation  {
+        width: 73px;
+    }
+
+    .closed-sidebar {
+        left: 250px;
+        width: calc(100% - 250px);
+        transition:  0.5s ease;
+    }
+
+    .close  {
+        width: 250px;
+    }
+  
+    
 }
 
