--- a/frontend/src/app/components/pages/dashboard/dashboard.component.css
+++ b/frontend/src/app/components/pages/dashboard/dashboard.component.css
@@ -1,5 +1,106 @@
 .dashboard {
-    height: 100vh;
+    height: 100%;
     width: 100%;
-    background-color: var(--toggle-color);
+    padding: 2rem;
+    background-color: var(--background-color);
+}
+
+.dash-content .title {
+    display: flex;
+    align-items: center;
+    margin: 70px 0 30px 0;
+}
+
+
+.dash-content .title mat-icon {
+    position: relative;
+    height: 35px;
+    width: 35px;
+    padding: 1.2rem;
+    background-color: var(--primary-color);
+    border-radius: 6px;
+    color: var(--toggle-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+}
+
+.dash-content .title .text {
+    font-size: 24px;
+    font-weight: 500;
+    color: var(--text-color);
+    margin-left: 10px;
+}
+
+.boxes {
+    padding: 0 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5px;
+    flex-wrap: wrap;
+}
+
+.boxes .box{
+    width: calc((100% / 3)  - 15px);
+    padding: 15px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 15px;
+    background-color: var(--box1-color);
+    box-shadow: 0 0 7px var(--shadow-dark);
+}
+
+.boxes .box mat-icon {
+    width: 35px;
+    height: 35px;
+    font-size: 35px;
+    color: #414141;
+}
+
+.boxes .box .text {
+    white-space: nowrap;
+    font-size: 18px;
+    font-weight: 600;
+    color: #414141;
+}
+
+.boxes .box .number {
+    font-size: 40px;
+    font-weight: 600;
+    color: #414141;
+}
+
+.boxes .box.box2 {
+    background-color: var(--box2-color);
+}
+.boxes .box.box3 {
+    background-color: var(--box3-color);
+}
+
+app-orders-list {
+    align-self: flex-start;
+}
+
+
+
+@media screen and (max-width: 780px) {
+    .boxes .box  {
+      width: calc(100% / 2 - 15px);
+      margin-top: 15px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .boxes .box  {
+      width: 100%;
+    }
+
+    app-orders-table {
+        width: 100%;
+        padding: 0;
+    }
 }
