--- a/frontend/src/app/components/pages/delele-account-page/delele-account-page.component.css
+++ b/frontend/src/app/components/pages/delele-account-page/delele-account-page.component.css
@@ -1,33 +1,12 @@
-:root {
-    --primary-color: #3f51b5;
-    --toggle-color: #fff;
-    --background-color: #fcfcfc;
-    --title-color: #616161;
-    --text-color: #3b3b3b;
-    --disabled-color: #808080;
-    --light-background: #f0f0f0f0;
-    --transparent-light: #fffffff5;
-    --transparent-strong: #ffffff7c;
-    --glass:#ffffffbe;
-    --light-color: #f5f5f5;
-    --shadow-color: #b9b9b9;
-    --shadow-dark: #00000033;
-    --accent-color: #F50057;
-    --warning-color: #f44336cc;
-    --light-blue: #f0f8ff;
-  
-  }
 
 .wrapper {
+    padding: 2rem;
     height: 100%;
-    min-height: calc(100vh - 40px) ; 
-    padding-bottom: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    flex: 1; 
     overflow: hidden;
 }
 
