--- a/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.css
+++ b/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.css
@@ -1,9 +1,6 @@
 .wrapper {
+    padding: 2rem;
     height: 100%;
-    min-height: calc(100vh - 40px) ; 
-    padding-top: 60px;
-    padding-bottom: 40px;
-    flex: 1;
     display: flex;
     align-items: center;
     justify-content: center; 
