--- a/frontend/src/app/components/pages/products-list/products-list.component.css
+++ b/frontend/src/app/components/pages/products-list/products-list.component.css
@@ -1,8 +1,7 @@
 .container {
-    padding-bottom: 40px;
+    padding: 2rem;
     height: 100%;
     max-width: 1200px;
-    flex: 1;
     overflow: hidden;
     text-align: center;
     transition: 0.5s ease;
@@ -78,13 +77,18 @@ mat-paginator {
 
 
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 900px) {
     .container {
         width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+
+    .table-container {
+        margin-top: 0;
     }
 
     table {
         margin-bottom: 0rem;
     }
-
 }
