--- a/frontend/src/app/components/pages/users-list/users-list.component.css
+++ b/frontend/src/app/components/pages/users-list/users-list.component.css
@@ -75,14 +75,18 @@ mat-paginator {
 
 
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 900px) {
     .container {
         width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+
+    .table-container {
+        margin-top: 0;
     }
 
     table {
         margin-bottom: 0rem;
     }
-
-
 }
