--- a/frontend/src/app/components/partials/footer/footer.component.css
+++ b/frontend/src/app/components/partials/footer/footer.component.css
@@ -1,8 +1,11 @@
 footer {
+    bottom: 0;
+    margin-left: 250px;
     height: 40px;
+    width: calc(100% - 250px);
     line-height: 40px;
     text-align: center;
-    z-index: 10 !important;
+    transition: 0.5s ease;
 }
 
 p {
@@ -12,3 +15,22 @@ p {
     color: var(--disabled-color);
     display: inline-block;
 }
+
+.closed-sidebar {
+    width: calc(100% - 73px);
+    margin-left: 73px;
+}
+
+
+@media screen and (max-width: 700px) {
+    footer {
+      width: calc(100% - 73px);
+      margin-left: 73px;
+    }
+
+    .closed-sidebar{
+        width: calc(100% - 250px);
+      }
+}
+
+
