--- a/frontend/src/app/components/partials/navigation/navigation.component.css
+++ b/frontend/src/app/components/partials/navigation/navigation.component.css
@@ -6,15 +6,14 @@ nav {
     left: 0; 
     background-color: var(--background-color);
     box-shadow: 0 0 8px var(--shadow-color);
-    z-index: 0;
+    z-index: 10;
     transition:  0.5s ease;
 }
 
-.link-name {
+nav.close .link-name {
     transition: opacity 0.5s ease-in-out;
 }
 
-  
 nav.close {
     width: 73px;
 }
@@ -35,7 +34,6 @@ nav.close li a .link-name{
 }
 
 .logo-name {
-    width: 100%;
     font-size: 22px;
     color: var(--text-color);
     white-space: nowrap;
@@ -50,6 +48,7 @@ nav.close .logo-name {
 .logo-image {
     width: 45px;
     height: 45px;
+    padding: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,6 +58,7 @@ nav.close .logo-name {
     color: #fff;
     letter-spacing: 1.5px;
     font-weight: 600;
+    font-size: 16px;
 }
 
 ul {
@@ -70,10 +70,9 @@ li {
     width: 100%;
     color:var(--primary-color);
     list-style: none;
-
 }
 
-li:hover  {
+li:hover {
     background:var(--primary-color);
     color: var(--toggle-color);
     cursor: pointer;
@@ -82,7 +81,6 @@ li:hover  {
 mat-icon {
     display: flex;
     align-items: center;
-    
 }
 
 a {
@@ -143,10 +141,9 @@ mat-icon {
 }
 
 .login-link {
-    width: 0px;
+    width: 100%;
 }
  
-
 .mode {
     position: relative;
     margin-bottom: 40px;
@@ -154,4 +151,41 @@ mat-icon {
     align-items: center;
     white-space: nowrap;
 }
+
+
+@media screen and (max-width: 700px) {
+    nav {
+        width: 73px;
+    }
+
+    nav.close {
+        width: 250px;
+    }
+
+    nav .logo-name {
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    nav.close .logo-name {
+        opacity: 1;
+        pointer-events: auto;
+    }
+
+    nav li a .link-name{
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    nav.close li a .link-name{
+        opacity: 1;
+        pointer-events: auto;
+    }
+    
+    
+}
+
+
+
+
 
