--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,7 +5,10 @@
 * {
   box-sizing: border-box;
   font-family:Arial, Helvetica, sans-serif;
+  
 }
+
+
 
 :root {
   --primary-color: #3f51b5;
@@ -24,23 +27,28 @@
   --accent-color: #F50057;
   --warning-color: #f44336cc;
   --light-blue: #f0f8ff;
+  --box1-color: #66b2f4;
+  --box2-color: #f8f875;
+  --box3-color: #e38bea;
 
 }
 
 html {
   font-size:16px;
   background-color: var(--background-color);
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
+ 
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /*!!!*/
   height: 100%;
   width: 100%;
+  min-height: 100vh;
   position: relative;
   background-color: var(--background-color);
+  box-sizing: border-box;
 
 }
 
@@ -68,19 +76,27 @@ a {
     --accent-color: rgb(253, 123, 143);
     --warning-color: #ff3c2e;
     --light-blue: #f0f8ff;
-  
-  
+    
 }
 
-.light-theme {
-  background-color: #fff;
-  color: #333;
-}
 
 
 mat-form-field {
-  margin-left: 250px;
   top: 60px;
+}
+
+.form-field-container {
+  color: green;
+  margin: 0 2rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+mat-form-field input  {
+  margin-top: 0rem;
+  
 }
 
 
