theme mode in local storage and preserved after refresh

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-loading></app-loading>
-<div class="wrapper" [class.dark-theme]="isDarkTheme()" [class.light-theme]="isLightTheme()">
+<div class="wrapper" [class.light-theme]="isLightTheme()" [class.dark-theme]="isDarkTheme()" >
   <app-header></app-header>
 
   <div class="app-container">
